--- a/météo/style.css
+++ b/météo/style.css
@@ -11,7 +11,6 @@ body{
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     margin: 0rem 0rem 5rem 0rem;
-    color: black;
 }
 #temp{
     font-size: 4rem;
@@ -22,4 +21,13 @@ body{
 }
 .search {
     margin: 10rem;
+}
+#finalWheather{
+    font-size: 200%;
+}
+#icon{
+    position: absolute;
+    left: 52%;
+    top: 45%;
+    width: 50px;
 }
